--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <header>
                 <div>
-                    <img src="https://static.wikia.nocookie.net/p__/images/4/45/Wander.jpg/revision/latest?cb=20140910230509&path-prefix=protagonist"
+                    <img src="https://pbs.twimg.com/profile_images/1418868030/colossusWander_400x400"
                      alt="Foto de perfil do user victoralva"/>
                 </div> 
 
