updated page title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <meta charset="UTF-8"> <!-- "meta" é a configuração do HTML, essa linha indica o conjunto de caracteres UTF-8, que permite a inclusão de acentos -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- indica que o conteúdo do viewport (janela do navegador) ocupará a dimensão da tela do dispotivio e que o texto não contenha zoom ao ser aberto -->
-        <title>NLW E-sports</title> <!-- nome que aparecerá na aba -->
+        <title>NLW-eSports</title> <!-- nome que aparecerá na aba -->
 
         <link rel="stylesheet" href="./styles.css"> <!-- a tag relaciona o link criado com um "stylesheet". No caso o link referência um lugar do mundo, nesse caso na própria pasta index, identificado pelo href. O "./" indica que o stylesheet está contido na pasta index -->
 
