changed user imagem .2

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         
         <header>
                 <div>
-                    <img src="https://pbs.twimg.com/profile_images/1418868030/colossusWander_400x400"
-                     alt="Foto de perfil do user victoralva"/>
+                    <img src="https://media.istockphoto.com/vectors/game-on-neon-game-controller-or-joystick-for-game-console-on-blue-vector-id1320799591?k=20&m=1320799591&s=612x612&w=0&h=-gtEK00fsfMUTbClNm1UeirSfeEN1EtsvYr_xpKUse0="
+                     alt="Foto de usuário"/>
                 </div> 
 
         </header>
