changed user image .3

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <header>
                 <div>
-                    <img src="https://media.istockphoto.com/vectors/game-on-neon-game-controller-or-joystick-for-game-console-on-blue-vector-id1320799591?k=20&m=1320799591&s=612x612&w=0&h=-gtEK00fsfMUTbClNm1UeirSfeEN1EtsvYr_xpKUse0="
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/81GPxo1eUsL.png"
                      alt="Foto de usuário"/>
                 </div> 
 
